Fix text cropping and highlighting overlapping

--- a/themes/otp/less/_carousel.less
+++ b/themes/otp/less/_carousel.less
@@ -155,11 +155,11 @@
 		}
 
 		li {
-			-ms-word-break: break-all;
-			word-break: break-all;
+			-ms-word-break: break-word;
 			word-break: break-word;
 			-webkit-hyphens: auto;
 			-moz-hyphens: auto;
+			-ms-hyphens: auto;
 			hyphens: auto;
 			opacity: 0;
 			.transition-property(opacity, 0.5s);
