--- a/themes/otp/less/otp.less
+++ b/themes/otp/less/otp.less
@@ -42,26 +42,26 @@
 
 .highlightBlue,
 .highlightblue {
-	background: rgba(0, 116, 198, 0.3);
-	padding: 1px;
+	background: #b3d5ee;
+	padding: 0 2px;
 }
 
 .highlightYellow,
 .highlightyellow {
 	background: #ffd100;
-	padding: 1px;
+	padding: 0 2px;
 }
 
 .highlightRed,
 .highlightred {
 	background: #ff3d1b;
-	padding: 1px;
+	padding: 0 2px;
 }
 
 .highlightGreen,
 .highlightgreen {
 	background: #2ABB9B;
-	padding: 1px;
+	padding: 0 2px;
 }
 
 @media print {
